handlers: return generated v1 objects for labels and rules
Map Label and Rule entity to the right v1 objects
