# internal/handlers/v1/outbound/rules.go
@@ -3,18 +3,14 @@ package outbound
 import (
 	"fmt"
 
+	v1 "git.tls.tupangiu.ro/cosmin/finante/api/v1"
 	"git.tls.tupangiu.ro/cosmin/finante/internal/entity"
 )
 
-type Rules struct {
-	Rules []Rule `json:"rules"`
-	Total int    `json:"total"`
-}
-
 // NewRules creates a new Rules response structure from a slice of entity.Rule.
-func NewRules(rules []entity.Rule) Rules {
-	r := Rules{
-		Rules: make([]Rule, 0),
+func NewRules(rules []entity.Rule) v1.Rules {
+	r := v1.Rules{
+		Rules: make([]v1.Rule, 0, len(rules)),
 	}
 	for _, rr := range rules {
 		r.Rules = append(r.Rules, NewRule(rr))
@@ -24,29 +20,24 @@ func NewRules(rules []entity.Rule) Rules {
 	return r
 }
 
-type Rule struct {
-	HRef    string  `json:"href"`
-	Name    string  `json:"name"`
-	Pattern string  `json:"pattern,omitempty"`
-	Labels  []Label `json:"labels,omitempty"`
-}
-
 // NewRule creates a new Rule response structure from an entity.Rule.
-func NewRule(rule entity.Rule) Rule {
-	r := Rule{
-		HRef:    fmt.Sprintf("%s/rules/%s", apiV1, rule.Name),
+func NewRule(rule entity.Rule) v1.Rule {
+	labels := make([]v1.Label, 0, len(rule.Labels))
+	r := v1.Rule{
+		Href:    fmt.Sprintf("%s/rules/%s", apiV1, rule.Name),
 		Name:    rule.Name,
-		Pattern: rule.Pattern,
-		Labels:  make([]Label, 0, len(rule.Labels)),
+		Pattern: ptr(rule.Pattern),
 	}
 
 	for _, label := range rule.Labels {
-		r.Labels = append(r.Labels, Label{
+		labels = append(labels, v1.Label{
 			Key:   label.Key,
 			Value: label.Value,
-			HRef:  fmt.Sprintf("/api/v1/labels/%d", label.ID),
+			Href:  fmt.Sprintf("/api/v1/labels/%d", label.ID),
 		})
 	}
+
+	r.Labels = &labels
 
 	return r
 }
